--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
 
         <activity android:name="com.dntz.tingmusic.activity.AboutActivity"
             android:label="@string/about"></activity>
-        <activity android:name="com.dntz.tingmusic.activity.MainActivity"></activity>
+        <activity android:name="com.dntz.tingmusic.activity.DownloadActivity"></activity>
     </application>
 
 </manifest>
